# replication-23-harsh-model_recycling

./: .gitignore  Makefile  README.md  apache-dataset.ipynb  conf_stat.tex  experiement-apache-activemq.ipynb  experiement-apache-camel.ipynb  experiement-apache-cassandra.ipynb  experiement-apache-flink.ipynb  experiement-apache-groovy.ipynb  experiement-apache-hbase.ipynb  experiement-apache-hive.ipynb  experiement-apache-ignite.ipynb  latency-lr.ipynb  latency-nn.ipynb  latency.ipynb  pyproject.toml  rq1.ipynb  stat_test.ipynb  time-windows.ipynb
ecoselekt/: calc_drift_imp.py  calc_surv_shap.py  check_lr.py  consts.py  download_commits.py  eval_lr.py  eval_models.py  eval_nn.py  eval_selekt.py  eval_selekt_lr.py  eval_selekt_nn.py  inference_latency.py  inference_latency_lr.py  inference_latency_nn.py  inference_selekt.py  inference_selekt_lr.py  inference_selekt_nn.py  log_util.py  oci_check.py  process_commits.py  process_selekt_vs_best.py  settings.py  setup_r.py  stat_test.py  train_lr.py  train_models.py  train_nn.py  train_selekt.py  train_selekt_lr.py  train_selekt_nn.py  utils.py
ecoselekt/dnn/: deepjit.py  deepjit_utils.py
model_recycling_stats/: calc_median_improv.py  log_util.py  settings.py  stat_test.py
