[tool.poetry]
name = "ecoselekt"
version = "0.1.0"
description = ""
authors = ["Harsh Patel <pharsh58@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scipy = "^1.9.3"
pandas = "^1.5.1"
matplotlib = "^3.6.1"
numpy = "^1.23.4"
scikit-learn = "^1.1.3"
imbalanced-learn = "^0.9.1"
pydantic = "^1.10.2"
transformers = "^4.24.0"
PyDriller = "^2.3"
code-tokenize = "^0.2.0"
xgboost = "^1.7.4"
rpy2 = "^3.5.10"
platformdirs = "^4.0.0"
torch = "^2.1.1"
torchvision = "^0.16.1"
torchaudio = "^2.1.1"
skorch = "^0.15.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
mypy = "^0.982"
Cython = "^0.29.32"
isort = "^5.10.1"
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train_models = "ecoselekt.train_models:main"
eval_models = "ecoselekt.eval_models:main"
download_commits = "ecoselekt.download_commits:main"
process_commits = "ecoselekt.process_commits:main"
train_selekt = "ecoselekt.train_selekt:main"
inference_selekt = "ecoselekt.inference_selekt:main"
eval_selekt = "ecoselekt.eval_selekt:main"
process_selekt_vs_best = "ecoselekt.process_selekt_vs_best:main"
setup_r = "ecoselekt.setup_r:main"
stat_test = "ecoselekt.stat_test:main"
train_nn = "ecoselekt.train_nn:main"
eval_nn = "ecoselekt.eval_nn:main"
train_lr = "ecoselekt.train_lr:main"
check_lr = "ecoselekt.check_lr:main"
eval_lr = "ecoselekt.eval_lr:main"
train_selekt_lr = "ecoselekt.train_selekt_lr:main"
inference_selekt_lr = "ecoselekt.inference_selekt_lr:main"
eval_selekt_lr = "ecoselekt.eval_selekt_lr:main"
prep_nn_data = "ecoselekt.prep_nn_data:main"
train_selekt_nn = "ecoselekt.train_selekt_nn:main"
inference_selekt_nn = "ecoselekt.inference_selekt_nn:main"
eval_selekt_nn = "ecoselekt.eval_selekt_nn:main"
inf_latency = "ecoselekt.inference_latency:main"
inf_latency_lr = "ecoselekt.inference_latency_lr:main"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
src_paths = ["ecoselekt", "tests"]